--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "chalk": "^4.1.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
