--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "author": "siman tov jamberu",
     "license": "ISC",
     "devDependencies": {
+        "@types/country-flag-icons": "^1.2.0",
         "@types/react-router-dom": "^5.1.7",
         "concurrently": "^5.3.0",
         "nodemon": "^2.0.12"
